--- a/public/penyedia.html
+++ b/public/penyedia.html
@@ -60,7 +60,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white border-bottom px-3">
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
           ❤️ Ruang Sejiwa
         </a>
         <button
