--- a/public/konsultasi.html
+++ b/public/konsultasi.html
@@ -9,6 +9,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -471,15 +478,22 @@
                     <label for="consultationTime" class="form-label"
                       >Waktu Konsultasi</label
                     >
-                    <input
-                      type="time"
-                      class="form-control"
-                      id="consultationTime"
-                      min="10:00"
-                      max="22:00"
-                    />
+                    <select class="form-select" id="consultationTime">
+                      <option selected value="">Pilih waktu...</option>
+                      <option value="10:00">10:00 - 11:00</option>
+                      <option value="11:00">11:00 - 12:00</option>
+                      <option value="13:00">13:00 - 14:00</option>
+                      <option value="14:00">14:00 - 15:00</option>
+                      <option value="15:00">15:00 - 16:00</option>
+                      <option value="16:00">16:00 - 17:00</option>
+                      <option value="18:00">18:00 - 19:00</option>
+                      <option value="19:00">19:00 - 20:00</option>
+                      <option value="20:00">20:00 - 21:00</option>
+                      <option value="21:00">21:00 - 22:00</option>
+                    </select>
                     <div class="form-text">
-                      Jadwal tersedia pukul 10:00 - 22:00.
+                      Sesi tersedia di luar jam istirahat (12:00-13:00 &
+                      17:00-18:00).
                     </div>
                   </div>
                 </div>
